[package]
name = "hakinet"
version = "0.1.0"
edition = "2024"
description = "A command-line network packet capture tool with a cute cat mascot"
authors = ["WangWindow <1598593280@qq.com>"]

[[bin]]
name = "hakinet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
pcap = "2.0"
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
