[package]
name = "hakinet"
version = "0.1.0"
edition = "2024"
description = "A command-line network packet capture tool with a cute cat mascot"
authors = ["WangWindow <1598593280@qq.com>"]

[lints]
workspace = true

[[bin]]
name = "hakinet"
path = "src/main.rs"

[dependencies]
hakinet-common = { path = "../hakinet-common" }
clap = { workspace = true }
tokio = { workspace = true }
pcap = { workspace = true }
pnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }